<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projetotyche.AddProdActivity"
        android:background="@drawable/bgblack" >

    <Button
        android:id="@+id/btn_helpAddProduto"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_helpUse"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_backAddProduto"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_return"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_listProd"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_listProd"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_newProd"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_newProd"
        android:textColor="#ffffff" />

</RelativeLayout>
