<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projetotyche.ProductList"
    android:background="@drawable/bgblack" >

    <Button
        android:id="@+id/btn_readCurrent"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:background="@drawable/bgbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/BTN_readCurrent"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_nextProd"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:background="@drawable/bgbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/BTN_nextProd"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_removProd"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:background="@drawable/bgbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/BTN_removProd"
        android:textColor="#ffffff" 
       />

    <Button
        android:id="@+id/btn_listReturn"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:background="@drawable/bgbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/BTN_return" 
        android:textColor="#ffffff"/>

</RelativeLayout>
