<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bgblack"
    tools:context="com.example.projetotyche.CalcularRota" >

    <Button
        android:id="@+id/btn_guiarRota"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_guiarRota"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_falarLista"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_falarLista"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_backCalcRota"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_backCalcRota"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_helpCalcRota"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_helpCalcRota"
        android:textColor="#ffffff" />

</RelativeLayout>
