<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projetotyche.MainActivity"
    android:background="@drawable/bgblack"
    >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >
    </FrameLayout>

    <Button
        android:id="@+id/btn_calcRoute"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_calcRota"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_addProd"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_addProd"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:background="@drawable/bgbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:text="@string/BTN_helpUse"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_mallSelect"
        android:layout_width="165dp"
        android:layout_height="291dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/bgbutton"
        android:text="@string/BTN_mallSelect"
        android:textColor="#ffffff" />

</RelativeLayout>